# sbx2hf

./: README.md  helpers.py  pyproject.toml  runconfig_parser.py  sb2hf.py  sbx2hf.py  urlparser.py
hf_gen/: README.md  create_data_files.py  create_docs.py  dataloader.py  dataset_loading_script.py  generate_config.py
