[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "sb2hf"
version = "0.1.0"
description = "A tool to automatically upload a Språkbanken resource to the Hugging Face Hub."
readme = "README.md"
requires-python = ">=3.11"
license.text = "The GNU General Public License v3.0"
 authors = [
     { name = "Felix Morger", email = "felix.morger@gu.se" }
 ]
dependencies = [
    "certifi~=2024.2.2",
    "charset-normalizer~=3.3.2",
    "filelock~=3.16.1",
    "fsspec~=2024.10.0",
    "huggingface-hub~=0.26.2",
    "idna~=3.6",
    "Jinja2~=3.1.4",
    "MarkupSafe~=3.0.2",
    "numpy~=2.1.3",
    "packaging~=24.2",
    "pandas~=2.2.3",
    "python-dateutil~=2.9.0.post0",
    "pytz~=2024.2",
    "PyYAML~=6.0.2",
    "requests~=2.31.0",
    "six~=1.16.0",
    "tqdm~=4.67.0",
    "typing_extensions~=4.12.2",
    "tzdata~=2024.2",
    "urllib3~=2.2.1"
]