[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "sbx2hf"
version = "0.1.1"
description = "A tool to automatically upload a Språkbanken resource to the Hugging Face Hub."
readme = "README.md"
requires-python = ">=3.11"
license.text = "The GNU General Public License v3.0"
 authors = [
     { name = "Felix Morger", email = "felix.morger@gu.se" }
 ]
dependencies = [
    "huggingface-hub~=0.26.2",
    "Jinja2~=3.1.4",
    "pandas~=2.2.3",
    "requests~=2.31.0"
]